--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
 	"name": "grounded",
 	"version": "1.2.7",
-	"versionStr": "1.2.7¾",
+	"versionStr": "1.2.7⅘",
 	"scripts": {
 		"start": "node main.js"
 	},
 	"main": "index.js",
 	"dependencies": {
+		"brotli": "1.3.2",
 		"formidable": "^1.2.1",
+		"js-md5": "0.7.3",
 		"mp3-duration": "^1.1.0",
 		"node-zip": "github:kyriosli/node-zip",
-		"xmldoc": "^1.1.2",
-		"brotli": "1.3.2"
+		"xmldoc": "^1.1.2"
 	}
 }
